# 1.1.0 8/25/14
8/19/14 #50 fix drag bounds of pH meter
8/19/14 check in dependencies.json for 1.1.0-rc.1
# 1.1.0-rc.1 8/19/14
# 1.1 branched 8/19/14
7/29/14 check in ph-scale-128.png (website thumbnail)
6/26/14 #48 replace explicit prototype assignment with inherit(Object,...)
6/26/14 #47 change mvt to modelViewTransform
5/27/14 change 'imports' to 'modules' in require comments
5/16/14 ph-scale-basics#38 fix: water faucet is disabled after switching solvents
3/24/14 ph-scale-basics#37 fix initial state of water faucet
3/20/14 #43 change zoom range of Linear scale
3/17/14 #40 eliminate display of incorrect intermediate 'Molecule count' values, remove dependency in PHModel on Solution
3/13/14 delete TODO.txt
3/13/14 #39 provide navbar-specific icons to improve quality
# 1.0 branched 3/8/14
3/8/14 #38 zoom buttons: attach handle so that its line cap doesn't appear inside glassNode
# 1.0.0-dev.20 3/6/14
3/6/14 #28 when changing the solute, cancel any multi-touch interaction that may be in progress with the faucets
3/6/14 #25 use atomic method of changing water and solution volume only when both values are changing, otherwise notification may not happen
3/6/14 add check for zero volume in Solution.drain, so that we're not doing unnecessary work every frame
3/6/14 #32 tap-to-dispense fixed on Win+Chrome via a fix to scenery.SimpleDragHandler
3/6/14 #33 fix infinite bounds cycle by changing how we position value in graph indicators
3/6/14 #25 prevent intermediate pH value changes when changing the volume of water and solute simultaneously, so that 'ratio' doesn't update while draining
3/6/14 #26 new colors for 'blood' and 'hand soap', so that H3O+ molecules are visible with 'ratio' feature
3/6/14 move pH probe from 'center' to 'right' position for 'Custom' screen, move meter slightly to left so probe doesn't hit molecule counts
3/6/14 move pH probe behind ratio and molecule counts, so that it doesn't obscure these and looks more like probe is in solution