@@ -1,3 +1,4 @@
+8/25/14 check in dependencies.json for 1.1.0
 # 1.1.0 8/25/14
 8/19/14 #50 fix drag bounds of pH meter
 8/19/14 check in dependencies.json for 1.1.0-rc.1
